Name:          hpb
Version:       0.1.1
Author:        Joe Hendrix
Maintainer:    jhendrix@galois.com
Build-type:    Simple
Cabal-version: >= 1.9.2

library
  build-depends:
    base,
    bytestring,
    containers,
    data-binary-ieee754,
    hashtables,
    lens,
    mtl,
    text >= 1.2,
    unordered-containers,
    vector

  hs-source-dirs:
    src

  exposed-modules:
    Data.HPB


  ghc-options: -Wall -threaded
  ghc-prof-options: -O2 -fprof-auto-top

executable hpb
  build-depends:
    base >= 4,
    ansi-wl-pprint,
    array,
    bytestring,
    cmdargs,
    containers,
    directory,
    filepath,
    lens,
    mtl,
    text >= 1.2,
    utf8-string
  build-tools: alex, happy

  ghc-options: -Wall -threaded -rtsopts
  ghc-prof-options: -fprof-auto-top -O2

  other-modules:
    Data.HPB.AST
    Data.HPB.Lexer
    Data.HPB.Parser
    Data.HPB.Partial
    Data.HPB.Resolver

  hs-source-dirs: hpb
  main-is: Main_hpb.hs
